source/sass/blocks/promo.scss
.promo{
  margin-top: 94px;
  background-image: url(/img/globe-back-mobile.png), linear-gradient($basic-blue 733px, $dark-blue 733px);
  background-repeat: no-repeat;
  background-size: 100% 450px, 400px 110%;
  background-position: 0px -85px, 0px -92px;

  @media (min-width: $medium-width) {
    background-image: url(/img/globe-back-tablet.png);
    background-position: 0px 267px;
    background-size: 100% 505px;
  }

  @media (min-width: $large-width) {
    background-image: url(/img/globe-back-desktop.png);
    background-position: 0px -110px;
    background-size: 100% 795px;
  }
}

.promo__container{
  z-index: 11;
  position: relative;
  padding: 0;
  flex-direction: row;

  @media (max-width: $small-max-width) {
    & ul li:first-child{
      border-top-left-radius: 25px;
      border-top-right-radius: 25px;
    }

    & ul li:last-child{
      border-bottom-left-radius: 25px;
      border-bottom-right-radius: 25px;
    }
  }

  @media (min-width: $medium-width) and (max-width: $medium-max-width) {
    & ul li:first-child{
      border-top-left-radius: 25px;
    }

    & ul li:nth-of-type(2){
      border-top-right-radius: 25px;
    }

    & ul li:nth-of-type(3){
      border-bottom-left-radius: 25px;
    }

    & ul li:last-child{
      border-bottom-right-radius: 25px;
    }
  }

  @media (min-width: $large-width) {
    & ul li{
      border-top-left-radius: 25px;
      border-bottom-left-radius: 25px;
    }

    & ul li:last-child{
      border-top-right-radius: 25px;
      border-bottom-right-radius: 25px;
    }
  }
}
.promo__header{
  align-items: center;
  margin-bottom: 29px;

  @media (min-width: $medium-width) {
    display: flex;
    flex-direction: column;
  }

  @media (min-width: $large-width) {
    display: flex;
    flex-direction: row;
    justify-content: center;
  }
}

.promo__menu-container{
  display: flex;
  justify-content: center;

  @media (min-width: $large-width) {
    display: flex;
    align-items: center;
    justify-content: space-between;
  }
}

.promo__menu{
  margin-top: -550px;
  margin-bottom: 550px;

  @media (min-width: $medium-width) and (max-width: $medium-max-width) {
    display: none;
  }

  @media (min-width: $large-width) {
    background-color: #ffffff;
    margin-bottom: 0;
    margin-top: 0;
    margin-left: 0;
    margin-right: 0;
    padding-left: 25px;
    padding-right: 25px;
  }
}

.promo__actions{
  display: flex;
  justify-content: center;

  @media (min-width: $large-width) {
    background-color: #ffffff;
    padding-left: 25px;
    padding-right: 25px;
  }
}

.promo__authorization{
  margin-top: auto;
  margin-bottom: auto;
}

.promo__slogan{
  text-align: center;
  margin-block-start: 0;
  margin-block-end: 0;
  margin-inline-start: 0;
  margin-inline-end: 0;

  @include text(36px, bold, 40px, #ffffff);

  @media (min-width: $medium-width) {
    @include text(60px, bold, 70px, #ffffff);
  }

  @media (min-width: $large-width) {
    text-align: left;
    margin-top: -240px;
    margin-right: 59px;
  }
}

.promo__author-info{
  margin-top: 25px;
  max-width: 170px;

  @media (min-width: $medium-width) {
    max-width: 251px;
    @include text(21px, bold, 25px, #ffffff);
  }
}

.promo__indent{
  @media (min-width: $medium-width) {
    margin-top: 0;
  }

  @media (min-width: $large-width) {
    margin-top: -230px;
    padding-bottom: 108px;
  }
}

.promo__traveller-icon{
  margin-top: -10px;
  margin-left: 80px;
  width: 192px;
  height: 255px;

  @media (min-width: $medium-width) {
    margin-left: 0;
    margin-top: 32px;
    margin-bottom: -33px;
    width: 372px;
    height: 451px;
  }

  @media (min-width: $large-width) {
    display: flex;
    margin-bottom: 0;
    width: 431px;
    height: 640px;
  }
}

.promo__quote{
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  @media (min-width: $medium-width) {
    flex-direction: row-reverse;
  }

  @media (min-width: $large-width) {
    flex-direction: row;
  }
}

.promo__review{
  margin: 28px 0px 0px 0px;
  margin-left: 25px;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;

  @media (min-width: $medium-width) {
    margin-top: -95px;
  }

  @media (min-width: $large-width) {
    margin-top: -230px;
    margin-left: 58px;
  }
}

.promo__menu-actions{
  align-items: center;
  justify-content: center;
  align-items: center;
  margin-top: 7px;
}

.promo__menu-actions--visible{
  display: flex;
}

.promo__description{
  font-weight: 300;
  @media (min-width: $medium-width) {
    @include text(28px, 300, 33px, #ffffff);
    min-width: 266px;
  }
}

.promo__item{
  height: 80px;
  display: flex;
  justify-content: space-between;
  align-items: center;
  text-align: left;
  border-top-left-radius: 25px;
  border-top-right-radius: 25px;
  padding-left: 24px;
  padding-right: 21px;

  @media (min-width: $medium-width) {
    width: 100%;
    flex-direction: column;
    height: 88px;
    padding-top: 31px;
    padding-bottom: 21px;
    padding-left: 32px;
    align-items: flex-start;
  }

  @media (min-width: $large-width) {
    flex-direction: row;
    padding-right: 34px;
    height: 55px;
  }
}

.promo__list-item {
  margin-left: -1px;

  @media (min-width: $large-width) {
    &:not(first-child){
      margin-left: -21px;
    }
  }
}

.promo__button-authorization{
  font-size: 20px;
  line-height: 20px;
  border-radius: 25px;
}

.promo__icon{
  padding: 10px;

  @media (min-width: $large-width) {
    padding: 15px;
  }
}

.promo__order-number{
  @include text(18px, bold, 18px);

  @media (min-width: $medium-width) {
    font-size: 30px;
    line-height: 30px;
  }
}

.promo__logo{
  width: 198px;
  height: 60px;
  padding-top: 17px;
  padding-bottom: 13px;
}

